# deltax2sort

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Settings.toml  implementation_plan.md  walkthrough.md
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: deferred-work.md  spec-wire-vision-loop.md
docs/: TODO.md  development_guide.md  index.html  specifications.md  walkthrough.md
docs/manual/: configuration.tex  gcode.tex  installation.tex  maintenance.tex  operation.tex  overview.tex  preamble.tex  titlepage.tex
documentation/: TODO.md  development_guide.md  implementation_plan.md  manual.tex  specifications.md
documentation/manual/: configuration.tex  gcode.tex  installation.tex  maintenance.tex  operation.tex  overview.tex  titlepage.tex
models/: README.md  export_embedder.py
src/: app_config.rs  hardware.rs  main.rs  orchestrator.rs
src/vision/: calibration.rs  catalog.rs  classifier.rs  detector.rs  embedder.rs  mod.rs  pipeline.rs  tracker.rs
ui/: app_window.slint
