[package]
name = "deltax2sort"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive"] }
flexi_logger = "0.31"
log = "0.4.29"
opencv = "0.98.0"
serde = { version = "1.0.228", features = ["derive"] }
serialport = "4.8.1"
slint = "1.14.1"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"

[build-dependencies]
slint-build = "1.14.1"
